src/test/ui/impl-trait/example-calendar.stderr
error: opaque type's hidden type cannot be another opaque type from the same scope
  --> $DIR/example-calendar.rs:592:5
   |
LL |     it.map(format_month)
   |     ^^^^^^^^^^^^^^^^^^^^ one of the two opaque types used here has to be outside its defining scope
   |
note: opaque type whose hidden type is being assigned
  --> $DIR/example-calendar.rs:560:43
   |
LL | fn format_month(it: impl DateIterator) -> impl Iterator<Item=String> {
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: opaque type being used as hidden type
  --> $DIR/example-calendar.rs:590:39
   |
LL |                 -> impl Iterator<Item=impl Iterator<Item=String>>
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

